GDHI-76 Refactor YearOnYear feature <Arjun/Lahari>